--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "knex": "^1.0.3",
+    "knex-paginate": "^3.0.0",
     "morgan": "^1.10.0",
+    "pg": "^8.7.3",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.0"
   },
