--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "knex-paginate": "^3.0.0",
     "morgan": "^1.10.0",
     "pg": "^8.7.3",
+    "socket.io": "^4.4.1",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.0"
   },
